21-Jan-2012 C.Compiler now has a new abstract property IncludePathCompilerSwitches.

19-Jan-2012 Added new properties to Opus.Core.BuildManager: Finished and AdditionalThreadCompletionEvents. This is so that plugins can attach additional worker threads during the build. The former is a ManualResetEvent that is signalled when the build ends. This can be used to tell the additional threads to prepare to shut down. The latter is a list of ManualResetEvents that plugins can provide for each additional thread, and BuildManager waits on these to be signalled at the end of the build, allowing the threads to shut down cleanly. The current BuildManager can be identified through Opus.Core.State.BuildManager. This will only be valid when a build is just about to start.

19-Jan-2012 Adding Opus.Core.GetModuleNoToolchain, which can locate a module by just inspecting the Target's platform and configuration.

19-Jan-2012 Added Info message at the end of the build, showing the number of data entries (Nodes in the Graph) as an idea of how much work was done.

19-Jan-2012 Adding Include and Exclude methods to C.ObjectFileCollection, C.CPlusPlus.ObjectFileCollection and MocFileCollection.ObjectFileCollection.

18-Jan-2012 Any directory structure in the main package's Script folder is now represented faithfully in a debugging Opus project.

18-Jan-2012 The Global Option Override delegate should be executed BEFORE any other.

18-Jan-2012 Renamed Opus.Core.BaseOptionCollection.ProcessSetHandlers() to RefreshCachedValues(), to be more meaningful to users without having to understand the implementation details.

18-Jan-2012 In Opus.Core.Target, cache the 'key' used to identify instances, rather than using System.String.Format for each request, which is slow.

18-Jan-2012 Added methods Include and Exclude to Opus.Core.FileCollection. The former maps to AddRelativePaths, while the latter is new and will remove any files matching the pattern that the FileCollection already is aware of.
